testsuite/tests/statmemprof/exception_callback.reference
Fatal error: exception File "exception_callback.ml", line 21, characters 24-30: Assertion failed
